objects/enway__Lead_Related_Object_Mapping_Item__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>enway__Child_SObject_Api_Name__c</fullName>
        <label>Child SObject Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__Child_SObject_Field_Name__c</fullName>
        <label>Child SObject Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__Target_SObject_Api_Name__c</fullName>
        <label>Target SObject Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__Target_SObject_Field_Name__c</fullName>
        <label>Target SObject Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Related Object Mapping Item</label>
</CustomObject>